--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ li{
     
 }
 .cover{
-    background: url(cover.PNG);
+    background: url(cover.PNG) no-repeat center;
+    padding-top: 15%;
     width: 100%;
-    height: 300px;
     background-size: 100% 100%;
     grid-column: 2;
     grid-row: 1;     
@@ -75,6 +75,8 @@ li{
     display: flex;
     flex-flow: wrap;    
     justify-content: space-between;
+    align-items: stretch;
+    flex-direction: row;
 }
 .last-news{
     background: url(livros.PNG);
@@ -97,14 +99,9 @@ li{
     grid-column: 2;
     grid-row: 3;
 }
-fieldset{
-    text-align: center;
+.g10{
+    flex-grow: 10;
 }
-fieldset fieldset{
-    display: inline-block;
-    width: 46%;
-}
-
 a{
     text-decoration: none;
     color: inherit;
@@ -115,4 +112,45 @@ a{
 }
 .social a{
     font-size: 40px;
+}
+form{
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 40% 40%;
+    justify-content: center;
+}
+.pess{
+    grid-row: 1;
+    grid-column: 1;   
+}
+.prof{
+    grid-row: 1;
+    grid-column: 2;   
+}
+.butt{
+    grid-row: 2;
+    grid-column: 1/3;   
+}
+
+
+
+@media(max-width:500px){
+    form{
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 96%;
+    justify-content: center;
+}
+.pess{
+    grid-row: 1;
+    grid-column: 1;   
+}
+.prof{
+    grid-row: 1;
+    grid-column: 2;   
+}
+.butt{
+    grid-row: 2;
+    grid-column: 1/3;   
+}
 }
